examples/test/testpolicy16842.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16842
  namespace: namespace304
spec:
  podSelector:
    matchLabels:
      key11: value36
      key31: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value20
          key35: value23
      podSelector:
        matchLabels:
          key7: value45
